--- a/_ts5tmp.html
+++ b/_ts5tmp.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="test">
+<html ng-app="prototype">
 <head>
 	<title></title>
 	<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
@@ -8,18 +8,6 @@
 </head>
 
 <body ng-controller="Top">
-	<div class="container">
-		<!-- Navbar -->
-		<div class="navbar">
-			<ul class="nav navbar-nav">
-				<li ng-class="isStep(1)"><a href="javascript:;">Tilbakemelding</a></li>
-				<li ng-class="isStep(2)"><a href="javascript:;">Opplysninger</a></li>
-				<li ng-class="isStep(3)"><a href="javascript:;">Spørsmål (valgfritt)</a></li>
-				<li ng-class="isStep(4)"><a href="javascript:;">Bekreftelse</a></li>
-			</ul>
-		</div>
-	</div>
-	
 	<div class="container main">
 		<div ng-view></div>
 	</div>
@@ -27,5 +15,6 @@
 	<script src="http://bestiejs.github.io/json3/lib/json3.min.js" type="text/javascript"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.js" type="text/javascript"></script>
 	<script src="js/app.js" type="text/javascript"></script>
+	<script src="js/controllers.js" type="text/javascript"></script>
 </body>
 </html>
